Fix overflow and  line height of feed contents

--- a/css/app.css
+++ b/css/app.css
@@ -615,7 +615,7 @@ div.leftlist_item
     line-height:1.5rem;
     padding:16px;
     padding:1rem;
-    overflow-x:hidden;
+    overflow:hidden;
     white-space:normal;
 }
 .feed_content *
@@ -623,6 +623,7 @@ div.leftlist_item
     max-width: 100%;
     height:auto;
     white-space:normal;
+    line-height:1em;
 }
 
 .slide.center li.not_loggedin,
